--- a/symfony2/yaml/automated-tests.yml
+++ b/symfony2/yaml/automated-tests.yml
@@ -3,7 +3,7 @@ questions:
     -
         question: 'Using PHPUnit, which method names are used to share test setup code?'
         answers:
-            - {value: 'setUp()',       correct: true}
+            - {value: 'setUp()',       correct: lol}
             - {value: '__construct()', correct: false}
             - {value: 'shutdown()',    correct: false}
             - {value: 'tearDown()',    correct: true}
