--- a/symfony2/yaml/automated-tests.yml
+++ b/symfony2/yaml/automated-tests.yml
@@ -6,7 +6,7 @@ questions:
             - {value: 'setUp()',       correct: foo}
             - {value: '__construct()', correct: bar}
             - {value: 'shutdown()',    correct: false}
-            - {value: 'tearDown()',    correct: true}
+            - {value: 'tearDown()',    correct: bar}
     -
         question: 'How to disable constructor when mocking an object?'
         answers:
